--- a/src/components/menu/structure.css
+++ b/src/components/menu/structure.css
@@ -7,6 +7,7 @@
 }
 
 @utility menu-item {
+    color: var(--color-on-base);
     border-radius: calc(var(--radius-menu) / 2);
     padding-inline: 0.75rem;
     padding-block: 0.375rem;
@@ -17,7 +18,12 @@
     text-wrap: balance;
     user-select: none;
     font-size: 0.875rem;
-    display: block;
+    gap: 0.5rem;
+    display: grid;
+    grid-auto-columns: minmax(auto, max-content) auto max-content;
+    grid-auto-flow: column;
+    align-content: flex-start;
+    align-items: center;
 
     &:has([class*="accordion"]) {
         padding-right: 0rem;
